fixed grid gap to gap

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -104,7 +104,7 @@ img {
     .specials {
       margin-top: 3rem;
       display: grid;
-      grid-gap: 1rem;
+      gap: 1rem;
       grid-template-columns: repeat(4, 1fr);
 
       .fas {
@@ -143,6 +143,20 @@ img {
         &:nth-child(even) {
           background-color: $medium-color;
         }
+      }
+    }
+  }
+
+  // Home Section C
+  &-c {
+    .process {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1.5rem;
+      text-align: center;
+
+      &-step {
+        
       }
     }
   }
